@@ -530,6 +530,18 @@
             <setting name="OverrideUICulture" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ConDefaultRDGatewayHostname" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ConDefaultRDGatewayUsername" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ConDefaultRDGatewayPassword" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ConDefaultRDGatewayDomain" serializeAs="String">
+                <value />
+            </setting>
         </mRemoteNG.My.MySettings>
     </userSettings>
     <applicationSettings>
