@@ -2,6 +2,7 @@
   Fixed migration of external tools configuration and panel layout from Local to Roaming folder.
   Disable ICA Hotkeys for Citrix connections.  Fixes issue with international users.
   Added a language selection option so users can override the language if they don't want it automatically detected.
+  Fixed RD Gateway default properties and RDP reconnection count setting not being saved.
 
 1.66 (2011-05-02):
   Fixed connections not working
